--- a/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
+++ b/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0f34c2d0-b05e-4d71-9e7a-95f0fe19dd10",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d94771e3-6471-41a5-a9d8-bc83f38a6c33",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2fa123e7-75cc-4f30-8e2e-b16bc4bc5ef1",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b8dd34b4-1ce5-42bb-a6b6-e1607114172f",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.23.5\n"
+      "1.26.1\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dcdd5165-9146-4a7a-9880-136cf3397ee3",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "601c0e24-39a5-4aab-8c60-2a6a4df58601",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fa9ce554-6bff-4f30-a120-6ba438ead2c5",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c8d2a3e4-0819-41ca-ad72-5747d71a4562",
    "metadata": {},
    "outputs": [
@@ -214,17 +214,15 @@
    ],
    "source": [
     "# 1-D Arrays\n",
-    "\"\"\"An array that has 0-D arrays as its elements is called uni-dimensional or 1-D array.\n",
+    "\"\"\"An array that has 0-D arrays as its elements is called uni-dimensional or 1-D array. These are the most common and basic arrays.\"\"\"\n",
     "\n",
-    "These are the most common and basic arrays.\"\"\"\n",
     "arr = np.array([1, 2, 3, 4, 5])\n",
-    "\n",
     "print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e1bed5a7-e004-4aa7-84c3-3e7da5e8cc58",
    "metadata": {},
    "outputs": [
@@ -239,17 +237,15 @@
    ],
    "source": [
     "# 2-D Arrays\n",
-    "\"\"\"An array that has 1-D arrays as its elements is called a 2-D array.\n",
+    "\"\"\"An array that has 1-D arrays as its elements is called a 2-D array. These are often used to represent matrix or 2nd order tensors.\"\"\"\n",
     "\n",
-    "These are often used to represent matrix or 2nd order tensors.\"\"\"\n",
     "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "\n",
     "print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4be6ec64-4292-4a9e-87bf-8fa46fa2673e",
    "metadata": {},
    "outputs": [
@@ -267,11 +263,9 @@
    ],
    "source": [
     "# 3-D arrays\n",
-    "\"\"\"An array that has 2-D arrays (matrices) as its elements is called 3-D array.\n",
+    "\"\"\"An array that has 2-D arrays (matrices) as its elements is called 3-D array. These are often used to represent a 3rd order tensor.\"\"\"\n",
     "\n",
-    "These are often used to represent a 3rd order tensor.\"\"\"\n",
     "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
-    "\n",
     "print(arr)"
    ]
   },
@@ -296,12 +290,14 @@
    ],
    "source": [
     "# np.ones\n",
+    "\"\"\"Create an (M x N) size array with full of 1 values.\"\"\"\n",
+    "\n",
     "np.ones((3,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "fcbcc08e",
    "metadata": {},
    "outputs": [
@@ -313,89 +309,45 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# np.zeros\n",
+    "\"\"\"Create an (M x N) size array with full of 0 values.\"\"\"\n",
+    "\n",
     "np.zeros((3,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "5fd6e2fc",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.3832073 , 0.12539674, 0.15776202, 0.77051416],\n",
-       "       [0.73302527, 0.39646448, 0.46988874, 0.22341864],\n",
-       "       [0.61495746, 0.45317293, 0.21471721, 0.63424963]])"
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# np.random\n",
-    "np.random.random((3,4))"
+    "# np.empty\n",
+    "\"\"\" Create an uninitialized (M x N) size array, filled with garbage values / 0 values.\"\"\"\n",
+    "\n",
+    "np.empty((2, 3))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "7f52078f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-10,  -8,  -6,  -4,  -2,   1,   3,   5,   7,  10])"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# np.linspace\n",
-    "np.linspace(-10,10,10,dtype=int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "ee4d7fb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-10.        ,  -7.77777778,  -5.55555556,  -3.33333333,\n",
-       "        -1.11111111,   1.11111111,   3.33333333,   5.55555556,\n",
-       "         7.77777778,  10.        ])"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(-10,10,10,dtype=float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "c12963bc",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -406,14 +358,182 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# np.identity. creating an identity matrix\n",
-    "np.identity(3)"
+    "# np.eye\n",
+    "\"\"\"Create a 2D identity matrix with ones on the diagonal and zeros elsewhere.\"\"\"\n",
+    "\n",
+    "np.eye(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.arange\n",
+    "\"\"\"Create a 1D array with a range of values from start (inclusive) to stop (exclusive) with a specified step.\"\"\"\n",
+    "\n",
+    "np.arange(0, 10, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.linspace\n",
+    "\"\"\"Create a 1D array with evenly spaced values between start and stop, with a specified number of elements.\"\"\"\n",
+    "\n",
+    "np.linspace(0, 1, 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   1.,   10.,  100., 1000.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.logspace\n",
+    "\"\"\"Create a 1D array with values spaced evenly on a logarithmic scale within a specified range.\"\"\"\n",
+    "\n",
+    "np.logspace(0, 3, 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.full\n",
+    "\"\"\"Create a 2D array with all elements set to a specified value (e.g., 7).\"\"\"\n",
+    "\n",
+    "np.full((3, 4), 7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 9, 2, 7, 4])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.randint\n",
+    "\"\"\"Create a 1D array with random integers within a specified range.\"\"\"\n",
+    "\n",
+    "np.random.randint(1, 10, 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.56099473, 0.57573382, 0.68369045, 0.89630091],\n",
+       "       [0.37238108, 0.15154628, 0.66958791, 0.34243798],\n",
+       "       [0.11922792, 0.2219261 , 0.01195739, 0.64572486]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.random\n",
+    "\"\"\"Create a 2D array with random values from range 0-1\"\"\"\n",
+    "\n",
+    "np.random.random((3, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.85478751,  0.4616302 , -0.14353567],\n",
+       "       [ 0.34271011,  1.50684719,  0.25156562]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.randn\n",
+    "\"\"\"Create a 2D array with random values from a standard normal distribution (mean=0, std=1).\"\"\"\n",
+    "\n",
+    "np.random.randn(2, 3)\n"
    ]
   },
   {
@@ -672,9 +792,8 @@
     }
    ],
    "source": [
-    "\"\"\" An array can have any number of dimensions.\n",
+    "\"\"\" An array can have any number of dimensions. When the array is created, you can define the number of dimensions by using the ndmin argument. \"\"\"\n",
     "\n",
-    "When the array is created, you can define the number of dimensions by using the ndmin argument. \"\"\"\n",
     "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
     "\n",
     "print(arr)\n",
@@ -2605,9 +2724,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyKernel",
+   "display_name": "py",
    "language": "python",
-   "name": "pykernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2619,7 +2738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
