--- a/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
+++ b/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
@@ -612,24 +612,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "id": "c2447f30",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True])"
+       "array([False,  True,  True,  True])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# boolean dtype\n",
-    "np.array([1,2,3],dtype=bool) # numpy treat all non zero value as True"
+    "np.array([0,1,2,3],dtype=bool) # numpy treat all non zero value as True"
    ]
   },
   {
@@ -2576,27 +2576,6 @@
     "print(filter_arr)\n",
     "print(newarr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "0b206c60",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
