--- a/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
+++ b/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 5, 8, 2, 6])"
+       "array([4, 8, 9, 2, 9])"
       ]
      },
      "execution_count": 19,
@@ -495,9 +495,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.08517865, 0.74344329, 0.02732755, 0.74237922],\n",
-       "       [0.63714858, 0.99164135, 0.68979245, 0.00960233],\n",
-       "       [0.40781938, 0.04451504, 0.93980935, 0.58955706]])"
+       "array([[0.47123057, 0.69309896, 0.19650577, 0.05731571],\n",
+       "       [0.83297764, 0.77581923, 0.86600382, 0.40296112],\n",
+       "       [0.00368629, 0.18650335, 0.81566664, 0.43172395]])"
       ]
      },
      "execution_count": 20,
@@ -520,8 +520,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.02308011, -1.5486866 ,  1.06239146],\n",
-       "       [-1.98949392, -1.04726032,  0.1325648 ]])"
+       "array([[-1.18386332,  1.141981  , -0.04687045],\n",
+       "       [ 0.38933822,  1.30242721, -0.66155949]])"
       ]
      },
      "execution_count": 21,
