--- a/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
+++ b/00. Python Modules/01. Numpy/01_numpy-fundamental.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.26.1\n"
+      "1.26.3\n"
      ]
     }
    ],
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 8, 9, 2, 9])"
+       "array([5, 2, 3, 7, 9])"
       ]
      },
      "execution_count": 19,
@@ -495,9 +495,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.47123057, 0.69309896, 0.19650577, 0.05731571],\n",
-       "       [0.83297764, 0.77581923, 0.86600382, 0.40296112],\n",
-       "       [0.00368629, 0.18650335, 0.81566664, 0.43172395]])"
+       "array([[0.37567036, 0.53770607, 0.4999546 , 0.48519848],\n",
+       "       [0.27373822, 0.9837156 , 0.9794386 , 0.07526031],\n",
+       "       [0.29709678, 0.2266396 , 0.16638903, 0.36140417]])"
       ]
      },
      "execution_count": 20,
@@ -520,8 +520,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.18386332,  1.141981  , -0.04687045],\n",
-       "       [ 0.38933822,  1.30242721, -0.66155949]])"
+       "array([[-0.30999771, -0.02984327,  0.09353455],\n",
+       "       [-0.73600008, -1.65466566,  0.2775467 ]])"
       ]
      },
      "execution_count": 21,
@@ -2714,7 +2714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
