--- a/00. Python Modules/01. Numpy/02_numpy-random.ipynb
+++ b/00. Python Modules/01. Numpy/02_numpy-random.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
+      "43\n"
      ]
     }
    ],
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8068936287840797\n"
+      "0.8679776717853925\n"
      ]
     }
    ],
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[39 11 68 32 12]\n"
+      "[ 4 11 69 18  6]\n"
      ]
     }
    ],
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[27 73 55  1 85]\n",
-      " [77 54 58 52  6]\n",
-      " [84 23 77  6 23]]\n"
+      "[[34 95 90 46 44]\n",
+      " [13 91 69 33 38]\n",
+      " [16  8 72  7  3]]\n"
      ]
     }
    ],
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.3617855  0.3146708  0.65330222 0.20177156 0.9920235 ]\n"
+      "[0.89965258 0.91109263 0.16194756 0.62286579 0.69532635]\n"
      ]
     }
    ],
@@ -117,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.14335021 0.20215725 0.45680408 0.37041544 0.55303736]\n",
-      " [0.45652609 0.78998073 0.52071316 0.9733598  0.5170296 ]\n",
-      " [0.9897563  0.32744332 0.31264155 0.72011672 0.22272593]]\n"
+      "[[0.66945475 0.83948177 0.03012093 0.15267778 0.45289078]\n",
+      " [0.33397498 0.46175254 0.64334266 0.26320141 0.57540727]\n",
+      " [0.32174349 0.84875241 0.38892322 0.35373678 0.17413287]]\n"
      ]
     }
    ],
@@ -138,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "9\n"
      ]
     }
    ],
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 5 5 9 3]\n",
-      " [7 7 5 5 3]\n",
-      " [3 7 9 5 3]]\n"
+      "[[9 3 9 9 3]\n",
+      " [7 9 5 5 7]\n",
+      " [5 7 7 3 5]]\n"
      ]
     }
    ],
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 5 7 5 7 7 5 7 7 7 7 5 7 5 5 7 5 7 5 7 5 5 5 5 7 7 5 5 3 7 5 3 7 5 7 7 5\n",
-      " 7 7 5 5 3 7 7 5 7 7 5 5 7 7 7 7 7 3 7 7 7 7 5 7 5 5 5 7 7 7 3 3 5 3 7 7 5\n",
-      " 5 7 7 7 7 7 5 7 3 7 5 7 7 7 5 5 7 3 7 3 5 3 3 5 7 5]\n"
+      "[7 5 7 5 7 5 5 7 7 7 7 5 7 7 5 7 7 7 7 5 5 7 7 3 7 7 7 5 7 7 7 7 7 7 5 7 7\n",
+      " 5 3 7 3 7 5 7 7 7 7 7 7 7 5 7 7 7 5 3 7 7 5 7 7 7 5 7 7 7 5 5 7 7 5 7 7 7\n",
+      " 5 3 5 7 5 7 7 5 7 5 7 5 7 7 3 7 5 5 5 7 5 7 7 7 7 5]\n"
      ]
     }
    ],
@@ -206,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7 7 5 5 7]\n",
-      " [5 7 7 5 7]\n",
-      " [3 5 7 7 3]]\n"
+      "[[7 7 7 3 3]\n",
+      " [7 5 7 7 7]\n",
+      " [7 7 5 7 7]]\n"
      ]
     }
    ],
@@ -235,9 +235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyKernel",
+   "display_name": "py",
    "language": "python",
-   "name": "pykernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,12 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "443a60591c70f7f837290e63334a20afa2f72cd779ea4e09195a678df9a680ef"
-   }
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
