--- a/03. Data Structure/02. Linkedlist/01. Singly Linkedlist.ipynb
+++ b/03. Data Structure/02. Linkedlist/01. Singly Linkedlist.ipynb
@@ -27,11 +27,11 @@
     "    # Add item to end of list\n",
     "    def add_item(self, data):\n",
     "        new_node = Node(data)\n",
-    "        if not self.head:\n",
+    "        if self.head is None:\n",
     "            self.head = new_node\n",
     "        else:\n",
     "            current_node = self.head\n",
-    "            while current_node.next_node:\n",
+    "            while current_node.next_node is not None:\n",
     "                current_node = current_node.next_node\n",
     "            current_node.next_node = new_node\n",
     "\n",
