--- a/00. Python Modules/06. Pytorch/00. pytorch fundamentals.ipynb
+++ b/00. Python Modules/06. Pytorch/00. pytorch fundamentals.ipynb
@@ -1308,7 +1308,7 @@
     "\n",
     "How about a visual? \n",
     "\n",
-    "![visual demo of matrix multiplication](https://github.com/UtshoDeyTech/Python-Programming/tree/main/00.%20Python%20Modules/raw/main/images/00-matrix-multiply-crop.gif)\n",
+    "![visual demo of matrix multiplication](https://github.com/UtshoDeyTech/Python-Programming/raw/main/images/00-matrix-multiply-crop.gif)\n",
     "\n",
     "You can create your own matrix multiplication visuals like this at http://matrixmultiplication.xyz/.\n",
     "\n",
