--- a/00. Python Modules/06. Pytorch/00. pytorch fundamentals.ipynb
+++ b/00. Python Modules/06. Pytorch/00. pytorch fundamentals.ipynb
@@ -1308,7 +1308,7 @@
     "\n",
     "How about a visual? \n",
     "\n",
-    "![visual demo of matrix multiplication](https://github.com/mrdbourke/pytorch-deep-learning/raw/main/images/00-matrix-multiply-crop.gif)\n",
+    "![visual demo of matrix multiplication](https://github.com/UtshoDeyTech/Python-Programming/raw/main/Images/00-matrix-multiply-crop.gif)\n",
     "\n",
     "You can create your own matrix multiplication visuals like this at http://matrixmultiplication.xyz/.\n",
     "\n",
@@ -1344,11 +1344,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding the min, max, mean, sum, etc (aggregation)\n",
+    "\n",
+    "> **Note:** You may find some methods such as `torch.mean()` require tensors to be in `torch.float32` (the most common) or another specific datatype, otherwise the operation will fail. \n",
+    "\n",
+    "You can also do the same as above with `torch` methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "x = torch.arange(0, 100, 10)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum: 0\n",
+      "Maximum: 90\n",
+      "Mean: 45.0\n",
+      "Sum: 450\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Minimum: {x.min()}\")\n",
+    "print(f\"Maximum: {x.max()}\")\n",
+    "# print(f\"Mean: {x.mean()}\") # this will error\n",
+    "print(f\"Mean: {x.type(torch.float32).mean()}\") # won't work without float datatype\n",
+    "print(f\"Sum: {x.sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum: 450\n",
+      "Maximum: 90\n",
+      "Mean: 45.0\n",
+      "Sum: 450\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternative approach\n",
+    "print(f\"Minimum: {torch.sum(x)}\")\n",
+    "print(f\"Maximum: {torch.max(x)}\")\n",
+    "print(f\"Mean: {torch.mean(x.type(torch.float32))}\") # won't work without float datatype\n",
+    "print(f\"Sum: {torch.sum(x)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Positional min/max\n",
+    "\n",
+    "You can also find the index of a tensor where the max or minimum occurs with [`torch.argmax()`](https://pytorch.org/docs/stable/generated/torch.argmax.html) and [`torch.argmin()`](https://pytorch.org/docs/stable/generated/torch.argmin.html) respectively.\n",
+    "\n",
+    "This is helpful incase you just want the position where the highest (or lowest) value is and not the actual value itself ([softmax activation function](https://pytorch.org/docs/stable/generated/torch.nn.Softmax.html))."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a tensor\n",
+    "tensor = torch.arange(10, 100, 10)\n",
+    "print(f\"Tensor: {tensor}\")\n",
+    "\n",
+    "# Returns index of max and min values\n",
+    "print(f\"Index where max value occurs: {tensor.argmax()}\") # print the index no\n",
+    "print(f\"Index where min value occurs: {tensor.argmin()}\") # print the index no"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jhugscsd"
+   ]
   }
  ],
  "metadata": {
